--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,14 @@ path = "src/day2/0.rs"
 name = "day2_1"
 path = "src/day2/1.rs"
 
+[[bin]]
+name = "day3_0"
+path = "src/day3/0.rs"
+
+[[bin]]
+name = "day3_1"
+path = "src/day3/1.rs"
+
 [dependencies]
 aho-corasick = "1.1.2"
 itertools = "0.12.0"
