--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,15 @@ path = "src/day4/0.rs"
 name = "day4_1"
 path = "src/day4/1.rs"
 
+[[bin]]
+name = "day5_0"
+path = "src/day5/0.rs"
+
+[[bin]]
+name = "day5_1"
+path = "src/day5/1.rs"
+
 [dependencies]
 aho-corasick = "1.1.2"
 itertools = "0.12.0"
+regex = "1.10.2"
