--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,14 @@ path = "src/day6/0.rs"
 name = "day6_1"
 path = "src/day6/1.rs"
 
+[[bin]]
+name = "day7_0"
+path = "src/day7/0.rs"
+
+[[bin]]
+name = "day7_1"
+path = "src/day7/1.rs"
+
 [dependencies]
 aho-corasick = "1.1.2"
 itertools = "0.12.0"
