--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,18 @@ path = "src/day7/0.rs"
 name = "day7_1"
 path = "src/day7/1.rs"
 
+[[bin]]
+name = "day8_0"
+path = "src/day8/0.rs"
+
+[[bin]]
+name = "day9_0"
+path = "src/day9/0.rs"
+
+[[bin]]
+name = "day9_1"
+path = "src/day9/1.rs"
+
 [dependencies]
 aho-corasick = "1.1.2"
 itertools = "0.12.0"
